specl/tree-sitter-specl/test/corpus/expressions.txt
================================================================================
Integer literal
================================================================================

module Test
init { x == 42 }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (integer))))))))))))))

================================================================================
Boolean literals
================================================================================

module Test
init { x == true and y == false }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (boolean))))))))
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (boolean))))))))))))))

================================================================================
Set literal
================================================================================

module Test
init { x == {1, 2, 3} }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (set_lit
                            (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))
                            (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))
                            (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))))))))))))))))

================================================================================
Quantifier expression
================================================================================

module Test
init { forall x in S: x > 0 }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (quantifier_expr
                            quantifier: (identifier)
                            var: (identifier)
                            domain: (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (identifier)))))))))))
                            body: (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (identifier)))))))
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))))))))))))))

================================================================================
If-then-else expression
================================================================================

module Test
init { x == if y > 0 then 1 else 0 }

--------------------------------------------------------------------------------

(source_file
  (module_decl
    name: (identifier))
  (init_decl
    (block
      (expression
        (or_expr
          (and_expr
            (comparison_expr
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (identifier)))))))
              (membership_expr
                (additive_expr
                  (multiplicative_expr
                    (unary_expr
                      (postfix_expr
                        (primary_expr
                          (if_expr
                            condition: (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (identifier)))))))
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))
                            then: (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))
                            else: (expression
                              (or_expr
                                (and_expr
                                  (comparison_expr
                                    (membership_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (integer)))))))))))))))))))))))))
